small CSS fixes (label consistency, overflow demo)

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,10 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+abbr[title] {
+  border-bottom: none !important;
+  text-decoration: none !important;
+}
 
 html {
   box-sizing: border-box;
@@ -227,6 +231,7 @@ pre {
   font-family: "Andale Mono", Consolas, Courier, monospace, monospace;
   padding: 1.5rem;
   white-space: pre-wrap;
+  color: #000000;
 }
 
 @media screen and (min-width: 60em) {
@@ -444,6 +449,10 @@ i, em, cite {
     margin: 0;
   }
 
+  .demo-settings > label {
+    margin-top: 1rem;
+  }
+
   section {
     display: grid;
     grid-gap: 1.5rem 0;
@@ -499,7 +508,7 @@ i, em, cite {
   }
 
   .flex-2 > label {
-    margin: 1.5rem 1.25rem 0 1.25rem;
+    margin: 1rem 1.25rem 0 1.25rem;
   }
 
   .grid-4 figcaption {
@@ -524,7 +533,7 @@ i, em, cite {
       position: -webkit-sticky;
       position: sticky;
       top: 1.25rem;
-      margin: 0;
+      margin: 0.375rem 0 0 0;
     }
 
     .flex-2 {
@@ -553,7 +562,6 @@ i, em, cite {
     .demo-settings {
       grid-column: full-start / main-start;
       align-items: start;
-      margin-top: 1rem;
     }
 
     .gutter {
